# bellit

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: nightly.yml
.vim/: coc-settings.json
docker/: archlinux.Dockerfile  debian-13.Dockerfile  ubuntu-24.Dockerfile
script/package/deb/: build.sh
script/package/deb/debian/: bellit.install  changelog  control  copyright  rules
script/package/pacman/: PKGBUILD
script/package/scoop/: bellit.json
script/package/winget/manifests/g/greyishsong/bellit/1.1.0/: greyishsong.bellit.installer.yaml  greyishsong.bellit.locale.en-US.yaml  greyishsong.bellit.yaml
skill/bellit/: SKILL.md
src/: environment.cppm  main.cpp  notification.cppm  process.cppm
